# simple_ssh_copy

./: .gitignore  README.md  manual_upload_random_64kb.py  pyproject.toml  test-file.txt
docs/: technical-details.md
simple_ssh_copy/: SimpleSSHClient.py  __init__.py  __main__.py  download.py  download_dir.py  errors.py  key_manager.py  upload.py  utils.py
tests/: test_cli.py  test_download.py  test_ssh_algorithms.py  test_upload.py
